# Anfaia-Bot-Daily-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0001_initial_schema.py  0002_newsletters.py  0003_podcasts.py
app/: __init__.py  main.py
app/agents/: __init__.py  classic_editorial_brain.py  discord_publisher_agent.py  discussion_generator.py  duplicate_detector.py  news_classifier.py  news_collector.py  news_editor.py  newsletter_overview.py  podcast_scriptwriter.py  prompts.py
app/api/: schemas.py
app/api/routes/: news.py  newsletter.py  workflow.py
app/application/: use_cases.py
app/core/: config.py  container.py
app/database/: models.py  repositories.py
app/domain/: category_colors.py  entities.py  newsletter.py  podcast.py  value_objects.py
app/infrastructure/discord/: discord_publisher.py  embed_builder.py  null_publisher.py
app/infrastructure/editorial/: __init__.py  deep_agent_brain.py  factory.py
app/infrastructure/hosting/: __init__.py  github_pages_publisher.py  null_site_publisher.py
app/infrastructure/llm/: langchain_factory.py  openai_provider.py
app/infrastructure/newsletter/: __init__.py  html_renderer.py
app/infrastructure/persistence/: in_memory.py
app/infrastructure/podcast/: __init__.py  classic_producer.py  genfm_producer.py  rss_renderer.py
app/infrastructure/scheduler/: scheduler.py
app/infrastructure/sources/: article_fetcher.py  hackernews_source.py  reddit_source.py  registry.py  rss_source.py
app/infrastructure/tts/: __init__.py  cache.py  elevenlabs_assets.py  elevenlabs_tts.py  factory.py  gemini_tts.py  null_tts.py
app/interfaces/: article_fetcher.py  editorial.py  news_source.py  podcast_producer.py  publisher.py  repositories.py  site_publisher.py  tts.py
app/workflows/: base.py  daily_news_workflow.py  deepagents_news_workflow.py  editorial.py  podcast_workflow.py  weekly_newsletter_workflow.py
docker/: entrypoint.sh
scripts/: discord_diagnose.py  run_newsletter.py  test_podcast.py
tests/: conftest.py  test_agents.py  test_api.py  test_article_fetcher.py  test_config.py  test_deepagents_integration.py  test_domain.py  test_editorial.py  test_factories.py  test_genfm_producer.py  test_html_renderer.py  test_infrastructure.py  test_json_utils.py  test_newsletter_workflow.py  test_podcast_rss.py  test_podcast_scriptwriter.py  test_podcast_workflow.py  test_site_publisher.py  test_sources_registry.py  test_tts.py  test_use_cases.py  test_workflow.py
